# fail-repo-3740

./: Cargo.toml
src/: main.rs
